--- a/src/TimelinePage/TimelinePage.css
+++ b/src/TimelinePage/TimelinePage.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   --white: #ffffff;
   --black: #000000;
   --blue: #0288d1;
@@ -12,10 +12,10 @@ body {
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
-} */
-/* :focus {
+}
+:focus {
   outline: 0px solid transparent !important;
-} */
+}
 .timeline {
   padding: 50px 0;
   position: relative;
@@ -33,11 +33,11 @@ body {
 }
 .timeline h3 {
   font-weight: lighter;
-  background: var(--blue);
+  background: var(--black);
 }
 .timeline p,
 .timeline time {
-  color: var(--blue);
+  color: var(--black);
 }
 .timeline::before {
   content: "";
@@ -46,13 +46,13 @@ body {
   top: 0;
   left: 50%;
   width: 0;
-  border-left: 2px dashed var(--blue);
+  border-left: 2px dashed var(--black);
   height: 100%;
   z-index: 1;
   transform: translateX(-50%);
 }
 .timeline-content {
-  border: 1px solid var(--blue);
+  border: 1px solid var(--black);
   position: relative;
   border-radius: 0 0 10px 10px;
   box-shadow: 0px 3px 25px 0px rgba(10, 55, 90, 0.2);
@@ -74,7 +74,7 @@ body {
   top: 5%;
   left: 100%;
   width: 0;
-  border-left: 10px solid var(--blue);
+  border-left: 10px solid var(--black);
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
@@ -84,7 +84,7 @@ body {
   top: 5%;
   right: 100%;
   width: 0;
-  border-right: 10px solid var(--blue);
+  border-right: 10px solid var(--black);
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
@@ -96,7 +96,7 @@ body {
   content: "";
   width: 80px;
   height: 80px;
-  border: 2px dashed var(--blue);
+  border: 2px dashed var(--black);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -127,7 +127,7 @@ body {
     top: 0;
     left: 4%;
     width: 0;
-    border-left: 2px dashed var(--blue);
+    border-left: 2px dashed var(--black);
     height: 100%;
     z-index: 1;
     transform: translateX(-50%);
@@ -142,7 +142,7 @@ body {
     position: absolute;
     left: 0%;
     top: 60px;
-    /*transform: translateX(-50%;);*/
+    transform: translateX(-50%);
   }
   .timeline-nodes:nth-child(odd) .timeline-content::after {
     content: "";
@@ -152,7 +152,7 @@ body {
     right: 100%;
     width: 0;
     border-left: 0;
-    border-right: 10px solid var(--blue);
+    border-right: 10px solid var(--black);
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
   }
@@ -162,7 +162,7 @@ body {
     top: 5%;
     right: 100%;
     width: 0;
-    border-right: 10px solid var(--blue);
+    border-right: 10px solid var(--black);
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
   }
